@@ -22,7 +22,7 @@ OBJS+=mpeg.o mpegts.o mpegtsenc.o ffm.o crc.o img.o img2.o raw.o rm.o \
       yuv4mpeg.o 4xm.o flvdec.o psxstr.o idroq.o ipmovie.o \
       nut.o wc3movie.o mp3.o westwood.o segafilm.o idcin.o flic.o \
       sierravmd.o matroska.o sol.o electronicarts.o nsvdec.o asf.o \
-      ogg2.o oggparsevorbis.o oggparsetheora.o oggparseflac.o daud.o
+      ogg2.o oggparsevorbis.o oggparsetheora.o oggparseflac.o daud.o aiff.o
 
 # muxers
 ifeq ($(CONFIG_MUXERS),yes)
